--- a/AgentCooperation/AgentCooperation.csproj
+++ b/AgentCooperation/AgentCooperation.csproj
@@ -80,7 +80,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AddRecordAgents.xaml.cs">
+      <DependentUpon>AddRecordAgents.xaml</DependentUpon>
+    </Compile>
     <Compile Include="SqliteDataAccess.cs" />
+    <Page Include="AddRecordAgents.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Agents.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
