--- a/AgentCooperation/AgentCooperation.csproj
+++ b/AgentCooperation/AgentCooperation.csproj
@@ -83,6 +83,12 @@
     <Compile Include="AddRecordAgents.xaml.cs">
       <DependentUpon>AddRecordAgents.xaml</DependentUpon>
     </Compile>
+    <Compile Include="LoginWindow.xaml.cs">
+      <DependentUpon>LoginWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="MainWindow.xaml.cs">
+      <DependentUpon>MainWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="SqliteDataAccess.cs" />
     <Page Include="AddRecordAgents.xaml">
       <SubType>Designer</SubType>
@@ -114,6 +120,14 @@
       <DependentUpon>Cooperation.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="LoginWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="MainWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Orders.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
